--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </font></font></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
                   これらの利用規約は2020-08-13から有効です
                 </font></font></p> <p><strong><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">お問い合わせ</font></font></strong></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-                  利用規約について質問や提案がある場合は、kabeharuex@ezweb.ne.jpから遠慮なくご連絡ください。
+                  利用規約について質問や提案がある場合は、kabeharuex@gmail.comから遠慮なくご連絡ください。
                 </font></font></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
                   この利用規約のページは、</font><a href="https://app-privacy-policy-generator.firebaseapp.com/" target="_blank" rel="noopener noreferrer"><font style="vertical-align: inherit;">アプリのプライバシーポリシージェネレーター</font></a><font style="vertical-align: inherit;">によって生成されました
                   </font></font><a href="https://app-privacy-policy-generator.firebaseapp.com/" target="_blank" rel="noopener noreferrer"><font style="vertical-align: inherit;"></font></a></p>
