--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     </head>
     <body>
     <strong><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">利用規約</font></font></strong> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-                  アプリをダウンロードまたは使用すると、これらの条件が自動的に適用されます。したがって、アプリを使用する前に、これらの条件を注意深くお読みください。</font><font style="vertical-align: inherit;">アプリ、アプリの一部、または商標をコピーまたは変更することは一切許可されていません。</font><font style="vertical-align: inherit;">アプリのソースコードを抽出することは許可されていません。また、アプリを他の言語に翻訳したり、派生バージョンを作成したりしないでください。</font><font style="vertical-align: inherit;">アプリ自体、およびそれに関連するすべての商標、著作権、データベースの権利、その他の知的財産権は、引き続きAsに帰属します。
+                  アプリをダウンロードまたは使用すると、これらの条件が自動的に適用されます。したがって、アプリを使用する前に、これらの条件を注意深くお読みください。</font><font style="vertical-align: inherit;">アプリ、アプリの一部、または商標をコピーまたは変更することは一切許可されていません。</font><font style="vertical-align: inherit;">アプリのソースコードを抽出することは許可されていません。また、アプリを他の言語に翻訳したり、派生バージョンを作成したりしないでください。</font><font style="vertical-align: inherit;">アプリ自体、およびそれに関連するすべての商標、著作権、データベース権、およびその他の知的財産権は、依然としてAsに帰属します。
                 </font></font></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-                  Asは、アプリができる限り有用で効率的なものになるように努めています。</font><font style="vertical-align: inherit;">そのため、Googleはいつでも、いかなる理由でも、アプリを変更したり、アプリのサービスに課金したりする権利を留保します。</font><font style="vertical-align: inherit;">アプリやそのサービスの料金を請求することはありません。料金を正確に把握する必要があります。
+                  アプリができる限り便利で効率的なものになるように努めています。</font><font style="vertical-align: inherit;">そのため、Googleは、いつでも、いかなる理由でも、アプリを変更したり、そのサービスに課金したりする権利を留保します。</font><font style="vertical-align: inherit;">アプリやそのサービスの料金を請求することはありません。料金を正確に把握する必要があります。
                 </font></font></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-                  Deckerアプリは、サービスを提供するために提供された個人データを保存および処理します。</font><font style="vertical-align: inherit;">電話とアプリへのアクセスを安全に保つのはあなたの責任です。</font><font style="vertical-align: inherit;">したがって、デバイスの公式のオペレーティングシステムによって課されたソフトウェアの制限や制限を削除するプロセスである、ジェイルブレイクまたはルート権限を取得しないことをお勧めします。</font><font style="vertical-align: inherit;">スマートフォンがマルウェア、ウイルス、悪意のあるプログラムに対して脆弱になり、スマートフォンのセキュリティ機能が侵害され、Deckerアプリが正常に機能しないか、まったく機能しない可能性があります。
+                  Deckerアプリは、サービスを提供するために提供された個人データを保存および処理します。</font><font style="vertical-align: inherit;">電話とアプリへのアクセスを安全に保つのはあなたの責任です。</font><font style="vertical-align: inherit;">したがって、デバイスの公式のオペレーティングシステムによって課せられたソフトウェアの制限や制限を削除するプロセスである、ジェイルブレイクまたはルート権限を取得しないことをお勧めします。</font><font style="vertical-align: inherit;">それはあなたの電話をマルウェア/ウイルス/悪意のあるプログラムに対して脆弱にし、あなたの電話のセキュリティ機能を危うくするかもしれません、そしてそれはデッカーアプリが適切にあるいはまったく機能しないことを意味するかもしれません。
                 </font></font></p> <div><p>
                     The app does use third party services that declare their own
                     Terms and Conditions.
                   </p> <p>
                     Link to Terms and Conditions of third party service
                     providers used by the app
-                  </p> <ul><li><a href="https://policies.google.com/terms" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><li><a href="https://developers.google.com/admob/terms" target="_blank" rel="noopener noreferrer">AdMob</a></li><li><a href="https://firebase.google.com/terms/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p>
+                  </p> <ul><!----><li><a href="https://developers.google.com/admob/terms" target="_blank" rel="noopener noreferrer">AdMob</a></li><li><a href="https://firebase.google.com/terms/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p>
                   You should be aware that there are certain things that
-                  [Developer Name] will not take responsibility for. Certain
+                  As will not take responsibility for. Certain
                   functions of the app will require the app to have an active
                   internet connection. The connection can be Wi-Fi, or provided
-                  by your mobile network provider, but [Developer Name]
+                  by your mobile network provider, but As
                   cannot take responsibility for the app not working at full
                   functionality if you don’t have access to Wi-Fi, and you don’t
                   have any of your data allowance left.
@@ -42,18 +42,18 @@
                   using the app, please be aware that we assume that you have
                   received permission from the bill payer for using the app.
                 </p> <p>
-                  Along the same lines, [Developer Name] cannot always take
+                  Along the same lines, As cannot always take
                   responsibility for the way you use the app i.e. You need to
                   make sure that your device stays charged – if it runs out of
                   battery and you can’t turn it on to avail the Service,
-                  [Developer Name] cannot accept responsibility.
+                  As cannot accept responsibility.
                 </p> <p>
-                  With respect to [Developer Name]’s responsibility for your
+                  With respect to As’s responsibility for your
                   use of the app, when you’re using the app, it’s important to
                   bear in mind that although we endeavour to ensure that it is
                   updated and correct at all times, we do rely on third parties
                   to provide information to us so that we can make it available
-                  to you. [Developer Name] accepts no liability for any
+                  to you. As accepts no liability for any
                   loss, direct or indirect, you experience as a result of
                   relying wholly on this functionality of the app.
                 </p> <p>
@@ -62,7 +62,7 @@
                   system(and for any additional systems we
                   decide to extend the availability of the app to) may change,
                   and you’ll need to download the updates if you want to keep
-                  using the app. [Developer Name] does not promise that it
+                  using the app. As does not promise that it
                   will always update the app so that it is relevant to you
                   and/or works with the iOS version that you have
                   installed on your device. However, you promise to always
@@ -76,9 +76,9 @@
                 </p> <p><strong><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">この利用規約の変更</font></font></strong></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
                   利用規約は随時更新される場合があります。</font><font style="vertical-align: inherit;">したがって、変更がないか定期的にこのページを確認することをお勧めします。</font><font style="vertical-align: inherit;">変更があった場合は、このページに新しい利用規約を掲載してお知らせします。
                 </font></font></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-                  これらの利用規約は2020-08-13から有効です
+                  これらの利用規約は2020-08-22から有効です
                 </font></font></p> <p><strong><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">お問い合わせ</font></font></strong></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
-                  利用規約について質問や提案がある場合は、kabeharuex@gmail.comから遠慮なくご連絡ください。
+                  利用規約について質問や提案がある場合は、kabeharuex @ gmail.comまでお気軽にご連絡ください。
                 </font></font></p> <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
                   この利用規約のページは、</font><a href="https://app-privacy-policy-generator.firebaseapp.com/" target="_blank" rel="noopener noreferrer"><font style="vertical-align: inherit;">アプリのプライバシーポリシージェネレーター</font></a><font style="vertical-align: inherit;">によって生成されました
                   </font></font><a href="https://app-privacy-policy-generator.firebaseapp.com/" target="_blank" rel="noopener noreferrer"><font style="vertical-align: inherit;"></font></a></p>
